--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,5 +1,5 @@
 body,html{
-	font-family: sans-serif;
+	font-family: Roboto, RobotoDraft, Helvetica, Arial, sans-serif;
 	background:#fff;
 	width:100%;
 	height:100%;
