--- a/www/css/style.css
+++ b/www/css/style.css
@@ -250,3 +250,26 @@ input[readonly]
 {
     background-color:rgb(235, 235, 228);
 }
+
+
+
+.shake{
+	animation: shake-animation linear 0.3s;
+	animation-iteration-count: 2;
+	transform-origin: 50% 50%;
+}
+
+@keyframes shake-animation{
+	0% {
+		transform:  translate(0px,0px)  ;
+	}
+	25% {
+		transform:  translate(5px,0px)  ;
+	}
+	77% {
+		transform:  translate(-5px,0px)  ;
+	}
+	100% {
+		transform:  translate(0px,0px)  ;
+	}
+}
