--- a/www/css/style.css
+++ b/www/css/style.css
@@ -377,6 +377,44 @@ input[readonly]
 	padding-bottom: 5px;
 }
 
+.back-drop {
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	background: #00102000;
+	right: 0;
+	left: 0;
+	z-index: 15;
+	cursor: wait;
+}
+
+.loading-spinner-container-inactive {
+	height: 0px;
+	transition: 0.3s;
+}
+
+.loading-spinner-container {
+	margin: auto;
+	position: relative;
+	border: 2px solid #fff;
+	border-top: 0;
+	height: 40px;
+	width: 90px;
+	transition: 0.3s;
+	overflow: hidden;
+	background: #999;
+	border-bottom-left-radius: 4px;
+	border-bottom-right-radius: 4px;
+}
+
+.loading-spinner {
+	position: absolute;
+	width: 90px;
+	text-align: center;
+	color: #fff;
+	font-size: 170%;
+	bottom: 3px;
+}
 
 
 
