--- a/www/css/style.css
+++ b/www/css/style.css
@@ -143,6 +143,9 @@ img{
 	pointer-events:none;
 }
 
+.pointer {
+	cursor: pointer;
+}
 
 .clickable {
 	cursor:pointer;
@@ -416,6 +419,69 @@ input[readonly]
 	bottom: 3px;
 }
 
+.top-bar {
+	width: 100%;
+	color: #fff;
+	background: var(--BRAND_COLOR);
+	font-size: 120%;
+	text-align: center;
+	z-index: 8;
+}
+
+.lite-ui .top-bar {
+	display: none;
+}
+
+.top-bar-logo {
+	padding: 8px 10px;
+	float: left;
+	display: block;
+}
+
+.top-bar-right-area {
+	float: right;
+	margin-top: 15px;
+	margin-bottom: 15px;
+	margin-right: 10px;
+}
+
+.top-bar-user-container {
+	margin-right: 10px;
+}
+
+.top-bar-user-org-select {
+	position: relative;
+	width: 100%;
+	height: 32px;
+	padding: 2px 8px;
+	color: var(--TEXT_COLOR);
+	background: #fff;
+	border: 1px solid #aaa;
+	border-radius: 3px;
+	cursor: pointer;
+}
+
+.top-bar-user-multilang {
+	display: inline-block;
+	margin-right: 12px;
+	border-radius: 4px;
+	border: 1px solid var(--BRAND_COLOR_DARK);
+	color: var(--BRAND_COLOR_LIGHT);
+	padding: 3px 10px;
+}
+
+.top-bar-user-btn {
+	border-radius: 5px;
+	display: inline-block;
+	padding: 2px 10px;
+	width: 50px;
+}
+
+
+.top-bar-user-multilang-active {
+	color: #ffbf8c;
+}
+
 .footer {
 	color: #ccc;
 	padding: 50px;
@@ -427,9 +493,64 @@ input[readonly]
 	width: 100%;
 }
 
+.stage {
+	padding-top: 10px;
+	margin: 0 20px;
+}
+
+.lite-ui .stage {
+	margin: 30px;
+}
+
 .stage-container {
 	vertical-align: top;
 }
+
+.modal {
+	margin-top: 90px;
+	display: inline-block;
+	cursor: default;
+	max-height: 80%;
+	overflow-y: auto;
+	overflow-x: hidden;
+}
+
+.modal-backdrop {
+	text-align: center;
+	background: rgba(0,0,0,0.35);
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	z-index: 9;
+}
+
+.notify-area {
+	position: fixed;
+	right: 0;
+	bottom: 30px;
+	width: 350px;
+	z-index: 12;
+}
+
+.notify-block {
+	background: #765;
+	border: 1px solid #a98;
+	color: #fed;
+	border-radius: 5px;
+	padding: 12px;
+	margin: 3px;
+	cursor: pointer;
+}
+
+.loading-icon {
+	padding-top: 50px;
+	text-align: center;
+	color: #ccc;
+}
+
+
 
 
 
