--- a/www/css/style.css
+++ b/www/css/style.css
@@ -550,6 +550,29 @@ input[readonly]
 	color: #ccc;
 }
 
+.prompt-body {
+	min-width: 700px;
+	display: inline-block;
+	background: #F7F7F7;
+	color: #000;
+	border: 3px solid #F7F7F7;
+	padding: 30px;
+}
+
+.prompt-footer {
+	margin-top: 30px;
+}
+
+.prompt-yes-button {
+	background: #A8A9AD;
+	padding: 10px 55px 10px 40px;
+}
+
+.prompt-no-button {
+	background: #f84c4c;
+	padding: 10px 45px 10px 40px;
+}
+
 
 
 
