--- a/www/css/style.css
+++ b/www/css/style.css
@@ -151,16 +151,24 @@ img{
 .clickable {
 	cursor:pointer;
 	vertical-align:middle;
+	position: relative;
+	overflow: hidden;
 }
 
-.clickable:hover{
-	color:#123 !important;
-	background:#eeeef3 !important;
+.clickable:hover::after, .clickable:focus:after, .clickable:active:after {
+	opacity: 0.15;
 }
-
-.clickable-neg:hover{
-	color:#def !important;
-	background:#567 !important;
+.clickable:after {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    opacity: 0;
+    transition-property: opacity;
+    transition-duration: 0.01s;
+	background: #012;
 }
 
 .clickable:active{
@@ -798,7 +806,38 @@ input[readonly]
 	color: #4a2;
 }
 
+.field-lookup-icon-pic {
+	height: 30px;
+	width: auto;
+	margin-right: 8px;
+}
 
+.field-lookup-loading-icon-container {
+	text-align: center;
+	color: #ccc;
+	padding: 5px;
+}
+
+.field-lookup-drop-list {
+	position: absolute;
+	z-index: 8;
+	background: #F7F7F7;
+	min-width: 550px;
+	width: 100%;
+	border: 1px solid #BBBBBB;
+	padding: 6px 5px;
+	font-size: 80%;
+	box-shadow: 0px 4px 12px 0px #777;
+	border-radius: 6;
+	margin-bottom: 400px;
+}
+
+.field-lookup-clear-btn {
+	display: inline-block;
+	border-radius: 3px;
+	background-color: var(--DELETE_COLOR);
+	color: #fff;
+}
 
 
 
