form item style css

--- a/www/css/consts.css
+++ b/www/css/consts.css
@@ -1,6 +1,6 @@
 :root {
 	--BRAND_COLOR: #678;
-	--BRAND_COLOR_HEADER: #37b;
+	--BRAND_COLOR_HEADER: #678;
 	--BRAND_COLOR_SHADOW: #456;
 	--BRAND_COLOR_DARK: #345;
 	--BRAND_COLOR_LIGHT: #89a;
@@ -10,8 +10,9 @@
 	--CREATE_COLOR: #3b8;
 	--DELETE_COLOR: #b55;
 	--EDIT_COLOR: #37b;
-	--PUBLISH_COLOR: #b83;
-	--UNPUBLISH_COLOR: #f84c4c;
+	--PUBLISH_COLOR: #f84c4c;
+	--UNPUBLISH_COLOR: #b83;
+	--VIEW_COLOR: #0ab;
 
 	--SUCCESS_ALERT_BG: #f2f2f2;
 	--ERROR_ALERT_BG: #fee
