disable deletion for critical sections

--- a/www/css/debug-style.css
+++ b/www/css/debug-style.css
@@ -267,3 +267,14 @@
 	width: 120px;
 	white-space: nowrap;
 }
+
+/* disable critical sections  deletion/hidding*/
+.form-node-4 .list-item-id-2 .unpublish-btn,
+.form-node-4 .list-item-id-2 .danger-btn,
+.form-node-4 .list-item-id-4 .unpublish-btn,
+.form-node-4 .list-item-id-4 .danger-btn,
+.form-node-4 .list-item-id-10 .unpublish-btn,
+.form-node-4 .list-item-id-10 .danger-btn {
+	opacity: 0.3;
+	pointer-events: none;
+}
