--- a/www/css/style.css
+++ b/www/css/style.css
@@ -98,10 +98,6 @@ input {
 	box-sizing: border-box;
 }
 
-input:focus-visible {
-	outline: var(--BRAND_COLOR) auto 1px;
-}
-
 *::-webkit-scrollbar {
 	width: 10px;
 }
@@ -425,23 +421,25 @@ input[readonly] {
 
 .left-bar-item-doc {
 	background: #ffffff;
-	padding: 15px 11px;
+	padding: 9px 5px;
 	font-size: 90%;
+	font-weight: bold;
 	border-bottom: 1px solid #ddd;
 }
 
 .left-bar-group {
-	padding: 12px 11px;
+	padding: 5px 4px;
 	background: var(--BRAND_COLOR);
+	font-weight: bold;
 	color: var(--BRAND_COLOR_SHINE);
-	font-size: 80%;
+	font-size: 70%;
 	margin-top: 1px;
 }
 
 .left-bar-item-active {
 	background: #dfefff;
 	border-left: 5px solid var(--CREATE_COLOR);
-	padding-left: 6px;
+	padding-left: 0;
 }
 
 .left-bar-item-icon {
@@ -473,10 +471,7 @@ input[readonly] {
 	border-radius: 5px;
 	overflow: hidden;
 	border: 1px solid var(--BRAND_COLOR);
-}
-
-.left-bar-children>.left-bar-group-container>.left-bar-group {
-	margin-top: 0;
+	border-top: none;
 }
 
 .left-bar-body a:last-of-type .left-bar-item {
